--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,10 @@ name = "cyclic"
 version = "0.1.0"
 authors = ["mcncm <mcnallychristopherm@gmail.com>"]
 edition = "2018"
+description = "Simple, complete, and dependency-free modular arithmetic"
+license = "GPL-3.0"
+repository = "https://github.com/mcncm/cyclic"
+readme = "README.md"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
