Added small perf benchmark
* Added criterion.rs as a dev dependency; included a pow benchmark
  in preparation for Montgomery multiplication
* Renamed `inferior_values_coprime` to `inferior_values_indivisible`,
  since it's clearly checking for indivisibility, not coprimality
* Removed outdated `const_if_match` feature
* Minor changes including removing unneccessary brackets around const
  generic values

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,6 +17,13 @@ composite_order_division = []
 
 [dependencies]
 
+[dev-dependencies]
+criterion = "0.3"
+
+[[bench]]
+name = "arithmetic_perf"
+harness = false
+
 [dev-dependencies.cargo-husky]
 version = "1"
 default-features = false
